remove technical debt